# Ridgeline

./: .gitignore  .rustfmt.toml  Cargo.toml  Combine.py  Crop.py  Flatten.py  Project.py  README.md  all.csv
data/: Project.py  all.csv
src/: app_state.rs  input.rs  main.rs
src/game/: army.rs  city.rs  mod.rs  player.rs  spy.rs  units.rs
src/geo/: boundary.rs  cities.rs  data.rs  dem.rs  load.rs  mod.rs  optimise.rs  paths.rs  ways.rs
src/gfx/: mod.rs  sdl.rs  skia.rs
